# short-range-real-gibberlink

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md
Documentations/: README.md  REQUIREMENTS.md  futur protocole v2.md  getting-started.md
Documentations/technical/: ai_llm_communication.md
Use Cases/: Cas d'usage Déploiement d'appareil en environnements extrêmes.md  Use Case Access Badge.md  Use Case Emergency Response Coordination.md  Use Case IoT Device Provisioning and Key Exchange.md  Use Case Offline Secure Payment Systems.md  Use Case RGibberlink in a  Warehouse v1  Use Case Secure Medical Device Authentication and Data Transfer.md  Use Case Secure Mission Transfer for Autonomous Drones.md  Use Case Secure Supply Chain Verification.md  Use Cases  EVs, Drones, and Autonomous Charging Systems.txt
android-app/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  gibberlink-jni.cpp
android-app/app/src/main/java/com/Rgibberlink/: MainActivity.kt  PermissionAuthorizationActivity.kt  PermissionManager.kt  RangeDetectionActivity.kt  RgibberLinkJNI.kt
android-app/app/src/main/res/layout/: activity_face_validation.xml  activity_range_detection.xml
android-app/app/src/main/res/values/: strings.xml  styles.xml
android-app/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
examples/: hierarchical_protocol_demo.rs  python_post_quantum_demo.py  python_range_detection_demo.py
ggwave2/: CHANGELOG.md  CMakeLists.txt  LICENSE  README-tmpl.md  README.md
gibberdot/firmware/arduino_nano/: gibberdot_nano.hex
gibberdot/firmware/ch32v003/: Cargo.toml
gibberdot/schematics/: ultrasonic_transducer_circuit.txt
rgibberlink-core/: Cargo-wasm.toml  Cargo.toml  pyproject.toml
rgibberlink-core/.cargo/: config.toml
rgibberlink-core/benches/: protocol_benchmarks.rs
rgibberlink-core/realgibber/: README.md  __init__.py
rgibberlink-core/src/: audio.rs  audit.rs  channel_validator.rs  crypto.rs  fallback.rs  gibberdot.rs  hierarchical.rs  laser.rs  lib-wasm.rs  lib.rs  main.rs  mission_transfer.rs  multimodal.rs  optical_ecc.rs  performance_monitor.rs  post_quantum.rs  protocol.rs  python_bindings.rs  range_detector.rs  security.rs  ultrasonic_beam.rs  wasm.rs  weather.rs
rgibberlink-core/src/laser/: control.rs  mod.rs
rgibberlink-core/wasm-build/: Cargo.toml
rgibberlink-core/wasm-build/src/: crypto.rs  visual.rs  wasm.rs
