[package]
name = "rgibberlink-core"
version = "0.3.0"
edition = "2021"
description = "Rust core library for GibberLink protocol with security enhancements"
license = "GPL-3.0"

[dependencies]
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
crc32fast = "1.3"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
criterion = { version = "0.5", features = ["html_reports"], default-features = false, optional = true }

# Placeholder dependencies for short-range features
# ggwave = { version = "0.1", optional = true }
qrcode = { version = "0.13", optional = true }
reed-solomon-erasure = "6.0"

# Long-range extensions (placeholders - implement when available)
# signal-processing = { version = "0.1", optional = true }
# beamforming = { version = "0.2", optional = true }
# optical-ecc = { version = "0.3", optional = true }
# hal = { version = "0.4", features = ["laser", "parametric-audio"], optional = true }

# Weather API integration
reqwest = { version = "0.11", features = ["json"], optional = true }

# Python bindings
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
hkdf = "0.12.4"
clap = { version = "4.0", features = ["derive"], optional = true }

# Post-quantum cryptography
pqcrypto = { version = "0.15", optional = true }

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["short-range", "async"]
short-range = ["qrcode"]
async = ["tokio", "criterion"]
# long-range = ["signal-processing", "beamforming", "optical-ecc", "hal"]  # Enable when dependencies are available
python = ["pyo3", "clap"]
weather-api = ["reqwest"]
post-quantum = ["pqcrypto"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
wasm-only = ["wasm", "short-range"]  # WASM-only build without async dependencies
# android = ["long-range"]  # Enable when long-range is available

[lib]
name = "gibberlink_core"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "rgibberlink"
path = "src/main.rs"
