[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "realgibber"
version = "0.3.0"
description = "Python bindings for RealGibber - Secure directional communication protocol"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
authors = [
    {name = "RealGibber Team", email = "contact@realgibber.com"},
]
maintainers = [
    {name = "RealGibber Team", email = "contact@realgibber.com"},
]
keywords = ["security", "cryptography", "communication", "directional", "protocol", "drone", "autonomous"]

[project.urls]
Homepage = "https://github.com/your-org/realgibber"
Documentation = "https://github.com/your-org/realgibber/tree/main/Documentations"
Repository = "https://github.com/your-org/realgibber.git"
Issues = "https://github.com/your-org/realgibber/issues"
Changelog = "https://github.com/your-org/realgibber/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "realgibber"
module-name = "realgibber._core"